# dendromatics

./: .gitignore  CHANGELOG.md  Description.rst  README.md  README.rst  TODO.txt  pyproject.toml  readthedocs.yaml  requirements.txt  setup.cfg  tox.ini
.github/workflows/: build.yml  test.yml
code/: draw.py  ground.py  individualize.py  sections.py  stripe.py  voxel.py
code/examples/: example.py
docs/: algorithm.rst  cc_plugin.rst  conf.py  dendromatics.rst  dendromatics.voxel.rst  examples.rst  executable.rst  index.rst  installation.rst  modules.rst
docs/_build/doctrees/: algorithm.doctree  cc_plugin.doctree  dendromatics.doctree  dendromatics.voxel.doctree  environment.pickle  examples.doctree  executable.doctree  index.doctree  installation.doctree  modules.doctree
docs/_build/html/: .buildinfo  algorithm.html  cc_plugin.html  dendromatics.html  dendromatics.voxel.html  examples.html  executable.html  genindex.html  index.html  installation.html  modules.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/_build/html/_modules/: index.html
docs/_build/html/_modules/dendromatics/: draw.html  ground.html  individualize.html  sections.html  stripe.html
docs/_build/html/_modules/dendromatics/voxel/: voxel.html
docs/_build/html/_sources/: algorithm.rst.txt  cc_plugin.rst.txt  dendromatics.rst.txt  examples.rst.txt  index.rst.txt  installation.rst.txt  modules.rst.txt
docs/source/: conf.py  index.rst
examples/: example.py  main_with_gui.py
src/: ground.py  gui.py  main.py  main_with_gui.py
src/dendromatics/: __about__.py  __init__.py  draw.py  ground.py  individualize.py  progress.py  sections.py  stripe.py
src/dendromatics/primitives/: __init__.py  clustering.py  voxel.py
src/dendromatics/voxel/: __init__.py  voxel.py
tests/: test_ground.py  test_voxel.py  test_voxelate.py
