[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dendromatics"
dynamic = ["version"]
description = "Automatic dendrometry and forest inventory for terrestrial point clouds"
readme = "README.rst"
license = "GPL-3.0-or-later"
authors = [
    { name = "Carlos Cabo", email = "carloscabo@uniovi.es" },
    { name = "Diego Laino", email = "diegolainor@gmail.com" },
]
keywords = [
    "forestry",
    "lidar",
    "tls",
]
classifiers = [
    "Intended Audience :: Science/Research",
    "Programming Language :: Python",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: GIS",
]
dependencies = [
    "CSF @ git+https://github.com/jianboqi/CSF@875127d12e1d25c43f511d4cfce34854b8caa234#subdirectory=python",
    "jakteristics>=0.5.0",
    "laspy>=2.4.0",
    "numpy>=1.24.0",
    "scikit_learn>=1.2.0",
    "scipy>=1.10.0",
]

[tool.hatch.metadata]
allow-direct-references = true

[project.urls]
Source = "https://github.com/3DFIN/dendromatics"
# TODO: to be changed once sphinx documentation is deployed
Documentation = "https://github.com/3DFIN/3DFIN#README.md"
Issues = "https://github.com/3DFIN/dendromatics/issues"

[tool.hatch.version]
path = "src/dendromatics/__about__.py"

[tool.hatch.envs.default]
dependencies = [
  "pytest",
  "pytest-cov",
  "pytest-randomly",
]
[tool.hatch.envs.default.scripts]
cov = "pytest --cov-report=term-missing --cov-config=pyproject.toml --cov=src/dendromatics --cov=tests {args}--randomly-seed=1"
no-cov = "cov --no-cov {args}"

[[tool.hatch.envs.test.matrix]]
python = ["37", "38", "39", "310", "311"]

[tool.coverage.run]
branch = true
parallel = true
omit = [
    "src/dendromatics/__about__.py",
]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]

[tool.hatch.envs.docs]
detached = true
dependencies = [
  "sphinx",
  "sphinx-reference-rename",
  "sphinx-rtd-theme"
]
[tool.hatch.envs.docs.scripts]
build = "sphinx-build docs docs/_build"
serve = "python -m http.server docs/_build"

[tool.hatch.envs.lint]
detached = true
dependencies = [
  "ruff>=0.0.261",
  "black>=23.3.0",
  "isort>=5.12.0"
]
[tool.hatch.envs.lint.scripts]
# static analysis with ruff
check-static = "ruff check src/ tests/"
format = "black --check --diff --color src/ tests/"
sort-import = "isort --check-only --diff --color src/ tests/"
all = ["check-static", "format", "sort-import"]

[tool.ruff]
# Ignore import errors for now.
# TODO: Ignore Line too long error as well becaus it needs to be discussed 
ignore = ["F405", "F403", "E501"] 