[metadata]
name = dendromatics
version = 0.0.0
license = GPLv3+
description = Automatic dendrometry and forest inventory for terrestrial point clouds
long_description = file: README.rst
keywords = lidar forestry tls
author = Carlos Cabo, Diego Laino
author_email = carloscabo@uniovi.es, diegolainor@gmail.com
url = https://github.com/3DFIN/dendromatics
classifiers=
   Intended Audience :: Science/Research
   Programming Language :: Python
   Topic :: Scientific/Engineering
   Topic :: Scientific/Engineering :: GIS

[options]
packages = find:
package_dir =
    =src
include_package_data = True
install_requires =
   numpy
   laspy
   scipy
   scikit_learn
   CSF @ git+https://github.com/jianboqi/CSF@875127d12e1d25c43f511d4cfce34854b8caa234#subdirectory=python
   jakteristics
   
[options.packages.find]
where=src
